W-17264514: Update dependency org.apache.commons:commons-collections4 to v4.5.0 (#14374)